Colab を使用して作成されました

--- a/day1/day1_practice.ipynb
+++ b/day1/day1_practice.ipynb
@@ -141,11 +141,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "S28XgOm0ELSM"
+        "id": "S28XgOm0ELSM",
+        "outputId": "fab46687-a457-4409-d1d3-f9edbdd12b45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Errno 2] No such file or directory: '/content/lecture-ai-engineering/day1/01_streamlit_UI'\n",
+            "/content\n"
+          ]
+        }
+      ],
       "source": [
         "%cd /content/lecture-ai-engineering/day1/01_streamlit_UI"
       ]
@@ -391,7 +404,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "xuTWfymfotl5"
+      },
       "source": [
         "アプリケーションの機能としては、チャット機能や履歴閲覧があります。\n",
         "\n",
@@ -555,7 +570,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
